# CmakeDemo

./: README.md
Demo1/: CMakeLists.txt  add.cpp  add.h  hello.cpp
Demo2/: CMakeLists.txt
Demo2/inc_dir2/: myfunc2.h
Demo2/main_dir/: hello.cpp
Demo2/src_dir1/: myfunc1.cpp
Demo2/src_dir2/: myfunc2.cpp
Demo4/lib/: readme.md
Demo4/main_src/: main.cpp
